burger close button position fixed on small screens

--- a/#src/sass/components/_hamburger.sass
+++ b/#src/sass/components/_hamburger.sass
@@ -6,6 +6,8 @@
 #menu__toggle
 	opacity: 0
 	z-index: 50
+	&:checked ~ .menu__btn
+		position: absolute
 	&:checked ~ .menu__btn > span
 		transform: rotate(45deg)
 		top: 45px
