--- a/setters-test-work/css/style.css
+++ b/setters-test-work/css/style.css
@@ -354,6 +354,10 @@
   z-index: 50;
 }
 
+#menu__toggle:checked ~ .menu__btn {
+  position: absolute;
+}
+
 #menu__toggle:checked ~ .menu__btn > span {
   transform: rotate(45deg);
   top: 45px;
